# Logger2

./: README.md
src/: CMakeLists.txt  Logger2.cpp  Logger2.h  main.cpp
